--- a/portfolio.html
+++ b/portfolio.html
@@ -306,7 +306,7 @@ width: 100%;
         <div class="bt21">
           <div class="row">
             <img src="../Responsive-Portfolio/assets/images/shooky.jpg" alt="shooky"   style="width:50%">
-            <button class="btn" style="background-color:teal">shooky</button>
+            <a href="https://haog29.github.io/WordGuessGame/"><button class="btn" style="background-color:teal">HANGMAN</button></a>
           </div>
 
           <div class="row">
