--- a/index.html
+++ b/index.html
@@ -192,9 +192,10 @@ aside {
 
   </article>
   <aside>
-     <h3>Check portfolio for some BT21!
+     <h3>Let's play Hangman!
         <img id="img1" src="bt21.jpg" alt="Bt21">
      </h3>
+     <a href="https://haog29.github.io/WordGuessGame/"><button>click me</button></a>
         <p> Aside ipsum dolor sit amet consectetur adipisicing elit. 
             Adipisci tempora eligendi repudiandae quaerat ad odit autem sed deleniti veniam, 
             ullam reiciendis cupiditate doloremque fuga illo quibusdam molestias 
