--- a/portfolio.html
+++ b/portfolio.html
@@ -128,8 +128,8 @@
     .bt21 .btn  {
       position: absolute;
       top: 50%;
-      left: 50%;
-      transform: translate(-171%, 355%);
+      left: 37; 
+      transform: translate(-233%, 355%);
       -ms-transform: translate(-50%, -50%);
       background-color: #555;
       color: white;
@@ -144,7 +144,7 @@
       display: block;
       position: absolute;
       top: 50%;
-      left: 50%;
+      left: 37%;
       transform: translate(97%, 355%);
       -ms-transform: translate(-50%, -50%);
       background-color: #555;
@@ -305,13 +305,13 @@ width: 100%;
 
         <div class="bt21">
           <div class="row">
-            <img src="../Responsive-Portfolio/assets/images/shooky.jpg" alt="shooky"   style="width:50%">
-            <a href="https://haog29.github.io/WordGuessGame/"><button class="btn" style="background-color:teal">HANGMAN</button></a>
+            <img src="../Responsive-Portfolio/assets/images/shooky.jpg" alt="tata"   style="width:50%">
+            <a href="https://haog29.github.io/WordGuessGame/"><button class="btn1" style="background-color:teal">HANGMAN</button></a>
           </div>
 
           <div class="row">
-            <img src="../Responsive-Portfolio/assets/images/tata.jpg" alt="tata"   style="width:50%">
-            <button class="btn1"  style="background-color:teal">tata</button>
+            <img src="../Responsive-Portfolio/assets/images/tata.jpg" alt=Shooky   style="width:50%">
+            <a href="https://haog29.github.io/unit-4-game/"><button class="btn" style="background-color:teal">ENERGYCOLLECTOR</button></a>
           </div>
           <div class="row">
             <img src="../Responsive-Portfolio/assets/images/koya.jpg" alt="koya"   style="width:50%">
