--- a/portfolio.html
+++ b/portfolio.html
@@ -161,7 +161,7 @@
       display: block;
       position: absolute;
       top: 50%;
-      left: 50%;
+      left:63%;
       transform: translate(-190%, 903%);
       -ms-transform: translate(-50%, -50%);
       background-color: #555;
@@ -315,7 +315,7 @@ width: 100%;
           </div>
           <div class="row">
             <img src="../Responsive-Portfolio/assets/images/koya.jpg" alt="koya"   style="width:50%">
-            <button class="btn2" style="background-color:teal">koya</button>
+            <a href="https://haog29.github.io/TriviaGame/"><button class="btn2" style="background-color:teal">Trivia Game</button></a>
           </div>
           <div class="row">
               <img src="../Responsive-Portfolio/assets/images/mang.jpg" alt="mang"   style="width:50%">
