--- a/portfolio.html
+++ b/portfolio.html
@@ -177,9 +177,9 @@
       display: block;
       position: absolute;
       top: 50%;
-      left: 50%;
-      transform: translate(79%, 903%);
-      -ms-transform: translate(-50%, -50%);
+      left: 47%;
+      transform: translate(79%, 918%);
+      -ms-transform: translate(62%, 922%);
       background-color: #555;
       color: white;
       font-size: 11px;
@@ -305,12 +305,12 @@ width: 100%;
 
         <div class="bt21">
           <div class="row">
-            <img src="../Responsive-Portfolio/assets/images/shooky.jpg" alt="tata"   style="width:50%">
+            <img src="../Responsive-Portfolio/assets/images/shooky.jpg" alt="shooky"   style="width:50%">
             <a href="https://haog29.github.io/WordGuessGame/"><button class="btn1" style="background-color:teal">HANGMAN</button></a>
           </div>
 
           <div class="row">
-            <img src="../Responsive-Portfolio/assets/images/tata.jpg" alt=Shooky   style="width:50%">
+            <img src="../Responsive-Portfolio/assets/images/mang.jpg" alt=mang   style="width:50%">
             <a href="https://haog29.github.io/unit-4-game/"><button class="btn" style="background-color:teal">ENERGYCOLLECTOR</button></a>
           </div>
           <div class="row">
@@ -318,8 +318,8 @@ width: 100%;
             <a href="https://haog29.github.io/TriviaGame/"><button class="btn2" style="background-color:teal">Trivia Game</button></a>
           </div>
           <div class="row">
-              <img src="../Responsive-Portfolio/assets/images/mang.jpg" alt="mang"   style="width:50%">
-              <button class="btn3" style="background-color:teal">mang</button>
+              <img src="../Responsive-Portfolio/assets/images/tata.jpg" alt="tata"   style="width:50%">
+             <a href="https://haog29.github.io/Giftastic/"> <button class="btn3" style="background-color:teal">Giftastic</button></a>
             </div>
 
             <div class="row">
