update Train Schedule

--- a/contact.html
+++ b/contact.html
@@ -205,7 +205,7 @@
             <footer class="page-footer">
 
 
-                © 2014 Copyright Text
+                © 2019 Copyright
 
 
             </footer>
