--- a/portfolio.html
+++ b/portfolio.html
@@ -193,7 +193,7 @@
     .btn4 {
       position: absolute;
       top: 50%;
-      left: 50%;
+      left: 61%;
       transform: translate(-167%, 1470%);
       -ms-transform: translate(-50%, -50%);
       background-color: #555;
@@ -324,7 +324,8 @@ width: 100%;
 
             <div class="row">
                 <img src="../Responsive-Portfolio/assets/images/chimmy.jpg" alt="chimmy"   style="width:50%">
-                <button class="btn4" style="background-color:teal">chimmy</button>
+               <a href="https://haog29.github.io/TrainSchedule/" ><button class="btn4" style="background-color:teal">Train Schedule</button>
+                <a href="https://haog29.github.io/TrainSchedule/" ><button class="btn4" style="background-color:teal">Train Schedule</button>
               </div>
               <div class="row">
                   <img src="../Responsive-Portfolio/assets/images/rj.jpg" alt="Rj"   style="width:50%">
@@ -340,7 +341,7 @@ width: 100%;
     <footer class="page-footer">
 
 
-        © 2014 Copyright Text
+        © 2019 Copyright
 
 
     </footer>
